Stop email overlapping icons in footer

--- a/_sass/_wrapper.sass
+++ b/_sass/_wrapper.sass
@@ -75,13 +75,13 @@ a
         bottom: 0
     .contact
         left: 0
-        padding-left: $separator-curl
+        padding-left: $separator-curl * 0.8
         margin-bottom: 5px
         .first
             margin-right: 5px
     .links
         right: 0
-        padding-right: $separator-curl
+        padding-right: $separator-curl * 0.8
         text-align: right
     .link
         display: inline-block
@@ -105,6 +105,11 @@ a
 @include media("screen and (max-width: 530px)")
     body
         font-size: 12px
+    .page-footer
+        .contact
+            padding-left: $separator-curl * 0.7
+        .links
+            padding-right: $separator-curl * 0.7
 
 // Up to 420px
 @include media("screen and (max-width: 420px)")
@@ -112,6 +117,11 @@ a
         font-size: 10px
     .inner
         padding: ($site-padding-y / 1.5) ($site-padding-x / 3)
+    .page-footer
+        .contact
+            padding-left: $separator-curl * 0.6
+        .links
+            padding-right: $separator-curl * 0.6
 
 @-ms-viewport
     width: device-width
